2020-11-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc,
	  src/SDCClospre.hpp:
	  llospre fixes.

2020-11-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Enable non-zero right GET_VALUE_AT_ADDRESS operand for tlcs90.
	* src/SDCClospre.cc:
	  Enable speculative division for pdk in lospre (though pdk does not use lospre yet).

2020-11-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc,
	  src/SDCClospre.hpp:
	  Various llospre fixes.

2020-11-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc,
	  src/SDCClospre.hpp:
	  Minor comment cleanup.

2020-11-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc,
	  src/SDCClospre.hpp:
	  Fix some issues introduced in previous merges.

2020-11-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/pic14/glue.c:
	  --code-loc support for pic14, patch by Georgi Georgiev.

2020-11-10 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/sim.src/mem.cc:
	  Fix spelling in debug message.
	  sim/ucsim/doc/index.html:
	  Reencode to UTF-8.

2020-11-04 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3141.c:
	  Disable test for mcs51 due to bug #3146.

2020-11-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-3141.c:
	  Fix bug #3141.
	* src/z80/gen.c,
	  support/regression/tests/shifts2.c:
	  Fix bug #3142.

2020-11-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  Disable array initalizer support for gbz80 in trunk, so the remining issues can be worked out in a branch instead.

2020-10-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3134.

2020-10-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.h:
	  Increase limits, patch by Oleg Endo <olegendo@gcc.gnu.org>.
	* support/regression/Makefile.in:
	  add pdk15-stack-auto ton default target.

2020-10-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c: